<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@drawable/plain_background">

    <Button
        android:id="@+id/homeButton"
        android:onClick="pressHomeButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="@dimen/home_button_height"
        android:layout_height="@dimen/home_button_height"
        android:background="@drawable/home_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/about_top_bottom_padding"
        android:paddingLeft="@dimen/about_side_padding"
        android:paddingRight="@dimen/about_side_padding"
        android:paddingTop="@dimen/about_top_bottom_padding"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="@dimen/about_text_size_title"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/powerup_black"
        android:layout_marginBottom="@dimen/about_section_title_bottom_margin"
        android:id="@+id/about_title"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/about_background"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_game_section_title"
                    android:textColor="@color/powerup_black"
                    android:layout_marginBottom="@dimen/about_section_title_bottom_margin"
                    android:onClick="aboutGamePressed"
                    android:textSize="@dimen/about_text_size_section_title"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/about_the_game"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/powerup_black"
                        android:textSize="@dimen/about_text_size_section_content"
                        android:text="@string/about_game_section_content"
                        android:padding="10dp"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_urgency_section_title"
                    android:textSize="@dimen/about_text_size_section_title"
                    android:layout_marginTop="@dimen/about_section_title_top_margin"
                    android:layout_marginBottom="@dimen/about_section_title_bottom_margin"
                    android:onClick="aboutUrgencyPressed"
                    android:textColor="@color/powerup_black"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/about_the_urgency"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/powerup_black"
                        android:textSize="@dimen/about_text_size_section_content"
                        android:text="@string/about_urgency_section_content"
                        android:padding="10dp"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_how_app_helps_section_title"
                    android:textSize="@dimen/about_text_size_section_title"
                    android:layout_marginTop="@dimen/about_section_title_top_margin"
                    android:layout_marginBottom="@dimen/about_section_title_bottom_margin"
                    android:onClick="aboutHelpingByPressed"
                    android:textColor="@color/powerup_black"/>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/about_helping_by"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="4dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/powerup_black"
                        android:textSize="@dimen/about_text_size_section_content"
                        android:text="@string/about_how_app_helps_section_content"
                        android:padding="10dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
