...
    <string name="empty">""</string>
    <string name="scene">"Scene"</string>
    <string name="points_check">"Not enough points"</string>
    <string name="scenario_description">Scenario description</string>
    <string name="points">points</string>
    <string name="question">Question</string>
    <string name="about_title">About</string>
    <string name="about_game_section_title"><![CDATA[> The Game]]></string>
    <string name="about_game_section_content">PowerUp is an educational choose-your-own-adventure game for girls between the age of 12 and 14. The game consists of different scenarios in which the user can choose between multiple answers and thereby lead the conversation into different directions. The user can create a personalized avatar by choosing clothes, hair, eye and skin color. Later on the
    <string name="about_urgency_section_content">Increased exposure among preadolescents aged 12-14 to sexualized media has normalized engagement in sexual activity at younger ages. However information regarding sex is not very accessible to preadolescents. Only 65% of schools provide sex education and even less explain condom use. Having "the talk" at home is usually very awkward. Preadolescent g
    <string name="about_urgency_section_title"><![CDATA[> Why this App is needed]]></string>
    <string name="about_how_app_helps_section_title"><![CDATA[> How does PowerUp help teenagers?]]></string>
    <string name="about_how_app_helps_section_content">The app uses Social and Emotional Learning (SEL) to empower middle school girls to take ownership of their health and sexual activity. It is designed to increase access to reproductive health and self-esteem education by incorporating quality and relevant information surrounding those topics and it helps concretize corresponding concepts throu
...
    <string name="start_text"><b>Start</b></string>
    <string name="about_text"><b>About</b></string>
    <string name="continue_text"><b>Continue</b></string>
    <string name="replay"><b>Replay</b></string>
    <string name="ok" />
    <string name="create_avatar">\"Create new Avatar\"</string>
    <string name="ok_msg">Create new Avatar</string>
    <string name="start_dialog_message">If you start a new game, previous data and all karma points will be lost !</string>
    <string name="start_title_message">Are you Sure ?</string>
    <string name="start_confirm_message">Create new Avatar</string>
    <string name="purchase_confirm_title">Warning</string>
    <string name="purchase_confirm_message">Are you sure you want to purchase this item? You will be spending %d points and the purchase can\'t be reverted</string>
    <string name="purchase_confirm_ok">Purchase</string>
...
